# ldk-cmake-licensing-api-c-sample

./: CMakeLists.txt  README.md
inc/: hasp_api.h  hasp_vcode.h  sntl_adminapi.h
src/: hasp_demo.c  hasp_update.c  sntl_admin_demo.c
